[package]
name = "pssh-box"
description = "Parsing and serialization support for PSSH boxes used in DRM systems"
version = "0.2.1"
authors = ["Eric Marsden <eric.marsden@risk-engineering.org>"]
readme = "README.md"
repository = "https://github.com/emarsden/pssh-box-rs/"
license = "MIT"
keywords = ["PSSH", "DRM", "DASH", "streaming", "ContentProtection"]
categories = ["multimedia::video", "parser-implementations"]
publish = true
edition = "2021"


[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_path_to_error = "0.1.20"
serde_with = { version = "3.16.0", features = ["base64"] }
serde-xml-rs = "0.8.1"
serde_json = "1.0.145"
zerocopy = { version = "0.8.31", features = ["derive"] }
quick-xml = { version = "0.38.4", features = ["serialize", "overlapped-lists", "serde-types"] }
prost = { version = "0.14.2", features = ["derive"] }
prost-types = "0.14.2"
bytes = "1.11.0"
byteorder = "1.5.0"
hex = "0.4.3"
hex-literal = "1.0.0"
hxdmp = "0.2.1"
bstr = "1.12.1"
num_enum = "0.7.5"
base64 = "0.22.1"
tracing = { version = "0.1.41", features = ["attributes"] }
anyhow = "1.0.100"

[dev-dependencies]
clap = { version = "=4.4.18", features = ["cargo", "unicode", "wrap_help"] }
reqwest = { version = "0.12.24", features = ["blocking"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "time", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
test-log = { version = "0.2.18", features = ["trace"] }
pretty_assertions = "1.4.1"

[features]
vendored-protoc = ["dep:protobuf-src"]

[build-dependencies]
prost-build = { version = "0.14.1" }
protobuf-src = { version = "2.1.1", optional = true }

[profile.release]
lto = true
opt-level = 's'
